# shasou-core

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: recorder_summary.md
jsonschema/v1/: calibration_set.schema.json  drive_manifest.schema.json  event_tag.schema.json  platform.schema.json  topic_stats.schema.json  trajectory_metadata.schema.json  vehicle.schema.json  vehicle_type.schema.json
scripts/: check_dependencies.py  export_jsonschema.py
src/shasou_core/: __init__.py  constants.py  frames.py  validation.py  version.py
src/shasou_core/io/: trajectory_io.py
src/shasou_core/schemas/: calibration.py  common.py  events.py  health.py  manifest.py  platform.py  topics.py  trajectory.py  vehicle.py
tests/: test_calibration.py  test_common.py  test_events.py  test_frames.py  test_health.py  test_jsonschema.py  test_platform.py  test_topics_manifest.py  test_trajectory.py  test_validation.py  test_vehicle.py
